[package]
name = "nes_emulator"
version = "0.1.0"
authors = ["Justin Michaud <justin@justinmichaud.com>"]

[dependencies]
phf = "0.7.22"
phf_macros = "0.7.22"
piston = "0.37.0"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.53.0"
piston_window = "0.80.0"
image = "0.19.0"
rand = "0.5.3"

[dependencies.sdl2]
version = "0.31.0"
default-features = false
features = ["mixer"]